commands help and stuff

--- a/index.css
+++ b/index.css
@@ -36,6 +36,11 @@ body {
   .chatlog {
      font: 15px arial, sans-serif;
   }
+
+  .chatlogA {
+    font: 15px arial, sans-serif;
+    text-align: end;
+ }
   
   #chatbox {
     font: 17px arial, sans-serif;
